force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/QL_Asset_Corporate_Scheme__e.object-meta.xml
<CustomObject>
    <description>Asset Corporate Scheme Sync to iFly</description>
    <label>Asset Corporate Scheme</label>
    <pluralLabel>Asset Corporate Schemes</pluralLabel>
</CustomObject>