force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>