force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Additional_Contact_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Remarks__c</fullName>
    <label>Additional Contact Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>