force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Country_Code_f__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_f__c</fullName>
    <label>Country_Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>