force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Email_f__c.field-meta.xml
<CustomField>
    <fullName>Email_f__c</fullName>
    <label>Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>