force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/First_Name_f__c.field-meta.xml
<CustomField>
    <fullName>First_Name_f__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>