force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment__c</fullName>
    <label>Fulfilment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>