force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Last_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_f__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>