force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Mailing_City_f__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_f__c</fullName>
    <label>Mailing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>