force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Mailing_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Name_2__c</fullName>
    <label>Mailing Name Extra Line</label>
    <length>20</length>
    <type>Text</type>
</CustomField>