force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Mailing_Street_f__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_f__c</fullName>
    <label>Mailing Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>