force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Mobile_Country_Code_f__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code_f__c</fullName>
    <label>Mobile Country Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>