force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Mobile_Number_f__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_f__c</fullName>
    <label>Mobile Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>