force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>