force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Phone_Number_f__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_f__c</fullName>
    <label>Phone Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>