force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Renewals__c.field-meta.xml
<CustomField>
    <fullName>Renewals__c</fullName>
    <label>Renewals</label>
    <length>80</length>
    <type>Text</type>
</CustomField>