force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Salutation_f__c.field-meta.xml
<CustomField>
    <fullName>Salutation_f__c</fullName>
    <label>Salutation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>