force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Scheme_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Cost_Center__c</fullName>
    <label>Scheme Cost Center</label>
    <length>6</length>
    <type>Text</type>
</CustomField>