force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Scheme_End_Date_f__c.field-meta.xml
<CustomField>
    <fullName>Scheme_End_Date_f__c</fullName>
    <label>Scheme End Date</label>
    <type>Date</type>
</CustomField>