force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Scheme_Number__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Number__c</fullName>
    <description>External ID (Unique Case Insensitive)</description>
    <label>Scheme_Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>