force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type__c</fullName>
    <label>Scheme Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>