force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/Title_f__c.field-meta.xml
<CustomField>
    <fullName>Title_f__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>