force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/X1_Year_Membership_Fee_Points__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Membership_Fee_Points__c</fullName>
    <label>X1 Year Membership Fee Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>