force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/X1_Year_Membership_Renewal_Fee_GST__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Membership_Renewal_Fee_GST__c</fullName>
    <label>X1 Year Membership Renewal Fee GST</label>
    <length>80</length>
    <type>Text</type>
</CustomField>