force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/X2_Year_Membership_Fee_GST__c.field-meta.xml
<CustomField>
    <fullName>X2_Year_Membership_Fee_GST__c</fullName>
    <label>X2 Year Membership Fee GST</label>
    <length>80</length>
    <type>Text</type>
</CustomField>