force-app/main/default/objects/QL_Asset_Corporate_Scheme__e/fields/X4_Year_Membership_Fee_Published__c.field-meta.xml
<CustomField>
    <fullName>X4_Year_Membership_Fee_Published__c</fullName>
    <label>X4 Year Membership Fee Published</label>
    <length>80</length>
    <type>Text</type>
</CustomField>